--- a/css/app.css
+++ b/css/app.css
@@ -2,10 +2,11 @@ body {
     font-family: sans-serif;
     margin: 0;
     background-color: #f4f4f4;
-    background-image: url('../assets/img/img1.jpeg');
+    /*background-image: url('../assets/img/img1.jpeg');*/
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 100vh;
 }
 
@@ -13,26 +14,35 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    min-width: 400px;
+    min-height: 400px;
     box-sizing: border-box;
-    /*height: 600px;;*/
     background-color: #fff;
-    background-image: url('../assets/img/img5.jpeg');
+    background-color: transparent;
+    background-image: url('../assets/img/img2.jpg');
     background-size: contain;
-    padding: 30px;
-    border-radius: 8px;
+    padding: 0px 30px;
+    border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-    /*height: auto;*/
 }
 
 header{
-    margin-bottom: 20px;
+    margin-bottom: 0px;
+    width: 100%;
+    text-align: center;
+    background-color: #545b62;
+    position: fixed;
+    margin-top: 0;
+    justify-content: flex-start;
+    top: 0;
 }
 
 header h1 {
-    color: #333;
+    color: white;
     margin-bottom: 20px;
+    
+
 }
 
 .score {
@@ -69,13 +79,9 @@ header h1 {
     align-items: center;
     justify-content: flex-end;
     width: 100%;
-    
-    border: solid 2px black;
 }
 
 #area-soletracao{
-    border: solid 2px black;
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,7 +89,6 @@ header h1 {
 }
 
 #div-feedback{
-    border: solid 2px black;
     margin-bottom: 10px;
 }
 
@@ -95,7 +100,6 @@ header h1 {
     margin-bottom: 10px;
 }
 #id-action-buttons{
-    border:  solid 2px black;
     justify-content: center;
     margin-bottom: 0;
 }
@@ -146,7 +150,10 @@ header h1 {
 .spell-controls p {
     margin-top: 10px;
     font-size: 1em;
-    color: #555;
+    color: red;
+    background-color: #ffc107;
+    padding: 10px 20px;
+    border-radius: 10px;
 }
 
 #help-icon {
@@ -165,4 +172,17 @@ header h1 {
     border-radius: 5px;
     margin-top: 10px;
     text-align: left;
+}
+
+#id-footer{
+    position: fixed;
+    margin-top: 0;
+    margin-bottom: 0px;
+    bottom: 0px;
+    background-color: #545b62;
+    color: white;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    align-content: center;
 }
